chart/templates/deluge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    external-dns.alpha.kubernetes.io/target: "prod-ingress.markdavison.kiwi"
  labels:
    app: servarr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - deluge.markdavison.kiwi
      secretName: deluge-tls
  rules:
  - host: deluge.markdavison.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge-svc
            port:
              number: 80
